--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.login.LoginActivity" />
-        <activity android:name=".activity.register.RegisterActivity"></activity>
+        <activity android:name=".activity.register.RegisterActivity">
+
+        </activity>
         <activity
             android:name=".activity.main.MainActivity"
             android:label="@string/title_activity_main">
