--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,16 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.1.1'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+    ext {
+        supportLibraryVersion = "27.1.0"
+        butterKnifeVersion = '8.8.1'
+        retrofitVersion = '2.4.0'
     }
 }
 
