--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,13 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+    targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
 greendao {
@@ -25,7 +29,7 @@ greendao {
     targetGenDir 'src/main/java' //生成文件路径
 }
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:support-vector-drawable:${supportLibraryVersion}"
     implementation "com.android.support:support-v4:${supportLibraryVersion}"
@@ -37,14 +41,13 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
     implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}"
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
     implementation "com.jakewharton:butterknife:${butterKnifeVersion}"
-    implementation 'org.greenrobot:greendao:3.2.2' // add library
+    implementation 'org.greenrobot:greendao:3.2.2'
+    // add library
     //implementation 'com.android.support:multidex:1.0.3'
     annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
 }
