--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.login.LoginActivity" />
-        <activity android:name=".activity.register.RegisterActivity"></activity>
+        <activity android:name=".activity.register.RegisterActivity">
+
+        </activity>
         <activity
             android:name=".activity.main.MainActivity"
-            android:label="@string/title_activity_main"></activity>
-        <activity android:name=".activity.search.SearchActivity"></activity>
+            android:label="@string/title_activity_main">
+
+        </activity>
+        <activity android:name=".activity.search.SearchActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize">
+
+        </activity>
     </application>
 
 </manifest>
