--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -15,7 +16,6 @@ buildscript {
     }
     ext {
         supportLibraryVersion = "27.1.0"
-        butterKnifeVersion = '8.8.1'
         retrofitVersion = '2.4.0'
     }
 }
@@ -24,6 +24,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
