--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".App"
@@ -25,18 +25,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.login.LoginActivity" />
-        <activity android:name=".activity.register.RegisterActivity">
-
-        </activity>
+        <activity android:name=".activity.register.RegisterActivity"></activity>
         <activity
             android:name=".activity.main.MainActivity"
-            android:label="@string/title_activity_main">
-
-        </activity>
-        <activity android:name=".activity.search.SearchActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize">
-
-        </activity>
+            android:label="@string/title_activity_main"></activity>
+        <activity
+            android:name=".activity.search.SearchActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize"></activity>
+        <activity android:name=".activity.web.WebActivity"></activity>
     </application>
 
 </manifest>
