--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +17,7 @@ buildscript {
     ext {
         supportLibraryVersion = "27.1.0"
         retrofitVersion = '2.4.0'
+        androidxVersion = "1.0.0-alpha1"
     }
 }
 
