--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,17 +22,29 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
         <activity android:name=".activity.login.LoginActivity" />
-        <activity android:name=".activity.register.RegisterActivity"></activity>
+        <activity android:name=".activity.register.RegisterActivity">
+
+        </activity>
         <activity
             android:name=".activity.main.MainActivity"
-            android:label="@string/title_activity_main"></activity>
+            android:label="@string/title_activity_main">
+
+        </activity>
         <activity
             android:name=".activity.search.SearchActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize"></activity>
-        <activity android:name=".activity.web.WebActivity"></activity>
+            android:windowSoftInputMode="stateVisible|adjustResize">
+
+        </activity>
+        <activity android:name=".activity.web.WebActivity">
+
+        </activity>
     </application>
 
 </manifest>
