--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,30 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    //版本控制
     ext {
-        supportLibraryVersion = "28.0.0-rc01"
+        // Sdk and tools
+        compileSdkVersion = 28
+        minSdkVersion = 16
+        targetSdkVersion = 28
+
+        // App dependencies
+        constraintLayoutVersion = '1.1.2'
+        supportLibraryVersion = '28.0.0-rc01'
+        lifecycleVersion = '1.1.1'
         retrofitVersion = '2.4.0'
-        androidxVersion = "1.0.0-alpha1"
+        //androidxVersion = "1.0.0-alpha1"
         lottieVersion = "2.5.0"
+        rxAndroidVersion = '2.0.2'
+        rxjavaVersion = '2.1.9'
+        okhttpVersion = '3.10.0'
+        gsonVersion = '2.8.2'
+        greendaoVersion = '3.2.2'
+
+        //test version
+        junitVersion = '4.12'
+        runnerVersion = '1.0.1'
+        espressoVersion = '3.0.2'
 
     }
 }
