change to appcompat

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,19 +56,28 @@ dependencies {
     androidTestImplementation "com.android.support.test:runner:$rootProject.runnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
 
-
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$rootProject.lifecycleVersion"
+
     // alternatively - just ViewModel
-    implementation "android.arch.lifecycle:viewmodel:$rootProject.lifecycleVersion" // use -ktx for Kotlin
+    implementation "android.arch.lifecycle:viewmodel:$rootProject.lifecycleVersion"
+
+    // use -ktx for Kotlin
+
     // alternatively - just LiveData
     implementation "android.arch.lifecycle:livedata:$rootProject.lifecycleVersion"
+
     // alternatively - Lifecycles only (no ViewModel or LiveData).
+
     //     Support library depends on this lightweight import
     implementation "android.arch.lifecycle:runtime:$rootProject.lifecycleVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.lifecycleVersion" // use kapt for Kotlin
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.lifecycleVersion"
+
+    // use kapt for Kotlin
+
     // alternately - if using Java8, use the following instead of compiler
     implementation "android.arch.lifecycle:common-java8:$rootProject.lifecycleVersion"
+
     // optional - ReactiveStreams support for LiveData
     implementation "android.arch.lifecycle:reactivestreams:$rootProject.lifecycleVersion"
 }
