--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,7 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,14 +24,13 @@ buildscript {
         supportLibraryVersion = '28.0.0-rc01'
         lifecycleVersion = '1.1.1'
         retrofitVersion = '2.4.0'
-        //androidxVersion = "1.0.0-alpha1"
-        lottieVersion = "2.5.0"
+        androidxVersion = "1.0.0-alpha1"
+        lottieVersion = "2.7.0"
         rxAndroidVersion = '2.0.2'
         rxjavaVersion = '2.1.9'
         okhttpVersion = '3.10.0'
         gsonVersion = '2.8.2'
-        greendaoVersion = '3.2.2'
-
+        multidexVersion ='1.0.3'
         //test version
         junitVersion = '4.12'
         runnerVersion = '1.0.1'
